@startuml
skinparam classAttributeIconSize 0

class Juego {

}

class Partida{
        - cantidadTotalJugadores: int
        - cantidadJugadoresActivos: int
        - cantidadMaximaJugadoresPermitidos: int
        - juagres: Jugadores
        - objetivos: Objetivo
        - tarjetas: Tarjeta
        - ronda: int

        +atacar(paisSalida, paisAAtacar, numeroDeTropas): void
        +iniciarPartida():void
        -iniciarRonda():Jugador
}

class Jugador{
        +identfiicador: int 
        + color: str
        +objetivos: Objetivo
        +pais: Pais
        
        +atacar(partida, paisSalida, paisAAtacar, numeroDeTropas): void

}

class RondaColocacion{
    +colocarEjercitos(int cantidadTropas, Pais pais, Jugador jugador): void
    +setEjercitosDisponiblesParaColocar(Jugador jugador): void
    +activarTarjeta(Tarjeta tarjeta): void

}
class RondaAtaque{
    + atacar(Jugador atacante, Pais paisAtacante, Pais paisDefensor, int cantidadTropas)
}
class Tablero{
        +continentes: Continente
} 


Juego ---> Partida
Partida --->"2..*" Jugador
Partida ---> RondaColocacion
Partida ---> RondaAtaque
RondaColocacion ..>Tablero
RondaAtaque ..>Tablero
Partida ---> Tablero

@enduml